# RustSL

./: .gitignore  Cargo.toml  README.md  build.rs  encrypt.py  icon.rc  requirements.txt
.cargo/: config.toml
RustVEHSyscalls/: Cargo.toml  README.md
RustVEHSyscalls/src/: def.rs  hooks.rs  lib.rs  syscall.rs  utils.rs
bundle/: lain.html
config/: plugins.json
encrypt_lib/: ecc.py  ipv4.py
gui/: __init__.py  config_manager.py  main_window.py  styles.py  ui_components.py  widgets.py  worker.py
rsl-macros/: Cargo.toml
rsl-macros/src/: lib.rs
src/: main.rs  thunk.rs
src/alloc_mem/: global.rs  heap.rs  local.rs  mapview.rs  mod.rs  section.rs  section_veh_syscall.rs  sh_alloc.rs  snmp_util.rs  va.rs  va_from_app.rs  va_veh_syscall.rs
src/decode/: mod.rs
src/decrypt/: aes.rs  ecc.rs  ipv4.rs  ipv6.rs  mac.rs  mod.rs  rc4.rs  uuid.rs  xchacha20.rs
src/exec/: apc.rs  apc_veh_syscall.rs  create_remote_thread.rs  create_thread_veh_syscall.rs  early_bird_apc.rs  fiber.rs  fls_alloc.rs  linedda.rs  mod.rs
src/forgery/: bundle.rs
src/guard/: api_flood.rs  c_drive.rs  cpu_info.rs  desktop_files.rs  edge.rs  ip.rs  mod.rs  mouse.rs  peek.rs  prime.rs  rdtsc_timing.rs  spoof.rs  tick.rs  time.rs  uptime.rs  usb_mount.rs
src/load_payload/: cmdline.rs  mailslot.rs  mod.rs  pipe.rs  read_file.rs  read_file_v2.rs  read_from_self.rs
src/utils/: debug.rs  http.rs  mod.rs  win_api.rs
templates/: icon_rc.txt  src_target2.txt  src_target3.txt
